--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,28 +1,41 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Cadastro
+      Cálculo
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" class="no-scroll">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Cadastro</ion-title>
+      <ion-title size="large">Cálculo</ion-title>
     </ion-toolbar>
   </ion-header>
 
   <div id="container">
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>Cálcuo</ion-card-title>
+        <ion-card-subtitle>Calular base e altura</ion-card-subtitle>
+      </ion-card-header>
+    
+      <ion-card-content>
+        Digite sua base e altura abaixo, em seguida clique no botão calcular para obter a Área
+      </ion-card-content>
+    </ion-card>
     <ion-item>
-      <ion-label position="floating">Nome</ion-label>
-      <ion-input placeholder="Informe seu Nome"></ion-input>
-
-      <ion-label position="floating">Endereço</ion-label>
-      <ion-input placeholder="Informe seu Endereço"></ion-input>
-
-      <ion-label position="floating">Telefone</ion-label>
-      <ion-input placeholder="Informe seu Telefone"></ion-input>
+      <ion-label position="floating">Base</ion-label>
+      <ion-input type="number" placeholder="Informe um valor para base" name="base" [(ngModel)]="base"></ion-input>
     </ion-item>
+    <ion-item>
+      <ion-label position="floating">Altura</ion-label>
+      <ion-input type="number" placeholder="informe um valor para altura" name="Altura"
+        [(ngModel)]="altura"></ion-input>
+    </ion-item>
+    <ion-button color="secondary" (click)="calcularArea()">Calcular</ion-button><br>
+    <ion-label>Resposta</ion-label><br>
+    <ion-label color="warning">{{resultado}}</ion-label>
   </div>
+
 </ion-content>
